Fixed table of contents alignment.

--- a/docs/global.css
+++ b/docs/global.css
@@ -115,6 +115,7 @@ p
 {
 	border: none;
 	box-shadow: none;
+	text-align: left;
 }
 
 .no-display
